Fixed spacing issue with comma modifier on inline list object

--- a/05 - objects/_objects.list-inline.scss
+++ b/05 - objects/_objects.list-inline.scss
@@ -134,6 +134,7 @@ Seperate individual list items with a specific character
 
 .o-list-inline--delimited-comma {
 	.o-list-inline__item:after {
+		padding-left:0;
 		content: ",";
 	}
 }
